--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 
+<div id="container">
+	<h1>Todo Lista</h1>
+	<input type="text" name="">
+
+	<ul>
+		<li><span>X</span> Obrać ziemniaki</li>
+		<li><span>X</span> Kupić kota</li>
+		<li><span>X</span> Zrobić ciasto</li>
+		<li><span>X</span> Odwiedzić Babcię</li>
+	</ul>
+</div>
+
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
 </html>
