--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Todo Lista</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
 <div id="container">
 	<h1>Todo Lista</h1>
-	<input type="text" name="">
+	<input placeholder="Dodaj nowy Todo" type="text" name="">
 
 	<ul>
 		<li><span>X</span> Obrać ziemniaki</li>
