--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 	<title>Todo Lista</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
 <div id="container">
-	<h1>Todo Lista</h1>
+	<h1>Todo Lista <i class="fas fa-plus"></i></h1>
 	<input placeholder="Dodaj nowy Todo" type="text" name="">
 
 	<ul>
-		<li><span>X</span> Obrać ziemniaki</li>
-		<li><span>X</span> Kupić kota</li>
-		<li><span>X</span> Zrobić ciasto</li>
-		<li><span>X</span> Odwiedzić Babcię</li>
+		<li><span><i class="fas fa-trash-alt"></i></span> Obrać ziemniaki</li>
+		<li><span><i class="fas fa-trash-alt"></i></span> Kupić kota</li>
+		<li><span><i class="fas fa-trash-alt"></i></span> Zrobić ciasto</li>
+		<li><span><i class="fas fa-trash-alt"></i></span> Odwiedzić Babcię</li>
 	</ul>
 </div>
 
