Dodanie Polskich Znaków.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Todo Lista</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
@@ -20,6 +21,12 @@
 		<li><span><i class="fas fa-trash-alt"></i></span> Odwiedzić Babcię</li>
 	</ul>
 </div>
+<div style="clear: both"></div>
+	<footer>
+		Wykonane przez <a href="http://fb.com/bartuszak">BartusZak</a>
+		<br>
+		<a href="https://github.com/BartusZak/Todo-Lista" target="_blank"><img height="50px" src="https://cdn1.iconfinder.com/data/icons/simple-icons/256/github-256-black.png"><span id="github">GitHub</span></a>
+	</footer>
 
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
